[gd_scene load_steps=4 format=3 uid="uid://ds7wn0um67pr7"]

[ext_resource type="Script" uid="uid://d23w0xovrpy2w" path="res://scripts/menu/start_menu.gd" id="1_xr47m"]
[ext_resource type="VideoStream" uid="uid://bdd77s8d5sycm" path="res://assets/video/2792967-uhd_2160_1440_25fps.ogv" id="2_pridf"]
[ext_resource type="Theme" uid="uid://dwj6wip7nmedj" path="res://scenes/ui/botones_main_menu.tres" id="2_y35d7"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xr47m")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 2160.0
offset_bottom = 1440.0
scale = Vector2(1.12, 1.12)
stream = ExtResource("2_pridf")
volume_db = -5.0
autoplay = true
loop = true

[node name="Version" type="Label" parent="VideoStreamPlayer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = -512.15
offset_right = 323.0
offset_bottom = -489.15
grow_vertical = 0
text = "V.0.5.1. creado por Pep Santiago"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.123473, 0.123473, 0.123473, 1)

[node name="MenuBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NewGame" type="Button" parent="MenuBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_y35d7")
text = "NEW GAME"

[node name="Continue" type="Button" parent="MenuBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_y35d7")
text = "CONTINUE"

[node name="About" type="Button" parent="MenuBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_y35d7")
text = "ABOUT"

[node name="Exit" type="Button" parent="MenuBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("2_y35d7")
text = "EXIT"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 400)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -304.0
offset_right = 305.0
offset_bottom = -593.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "LAST VOYAGER:
SPACE EXPLORATION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AboutPopup" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(5020, 600)

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 5016.0
offset_bottom = 596.0

[node name="Label" type="Label" parent="AboutPopup/VBoxContainer"]
layout_mode = 2
text = "Para usar ese about_popup y mostrar texto dentro, lo más sencillo es configurar en el editor un PopupPanel (o un WindowDialog) con un Label que contenga tu texto. Te dejo los pasos:Para usar ese about_popup y mostrar texto dentro, lo más sencillo es configurar en el editor un PopupPanel (o un WindowDialog) con un Label que contenga tu texto. Te dejo los pasos:"

[node name="CloseButton" type="Button" parent="AboutPopup/VBoxContainer/Label"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Close"

[connection signal="pressed" from="MenuBox/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MenuBox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MenuBox/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="MenuBox/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="AboutPopup/VBoxContainer/Label/CloseButton" to="." method="_on_close_button_pressed"]
